--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "fast-csv": "^5.0.5",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
     "xlsx": "^0.18.5"
