--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.0",
     "leaflet": "^1.9.4",
+    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.0",
@@ -20,6 +22,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.22.2",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
