--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "fast-csv": "^5.0.5",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.3",
     "xlsx": "^0.18.5"
   }
 }
