--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.22.2",
     "url": "^0.11.4",
     "web-vitals": "^2.1.4"
